# Avio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Macros.cmake
cmake/modules/: FindWayland.cmake
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt  build_release.bat  main.cpp
examples/sandbox/assets/shaders/: hello-world.slang
examples/sandbox/shaders/: hello-world.slang
shaders/: avio_shader.slang
shaders/core/: avio_core.slang  avio_types.slang
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/d3d12_rhi/: CMakeLists.txt  d3d12_common.cpp  d3d12_common.hpp  d3d12_descriptors.cpp  d3d12_descriptors.hpp  d3d12_image.cpp  d3d12_image.hpp  d3d12_pch.hpp  d3d12_render_commands.cpp  d3d12_render_commands.hpp  d3d12_rhi.cpp  d3d12_rhi.hpp  d3d12_surface.cpp  d3d12_surface.hpp  d3d12_swapchain.cpp  d3d12_swapchain.hpp
src/backends/vulkan_rhi/: CMakeLists.txt  vulkan_common.cpp  vulkan_common.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pch.hpp  vulkan_render_commands.cpp  vulkan_render_commands.hpp  vulkan_rhi.cpp  vulkan_rhi.hpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
src/core/: CMakeLists.txt  core.hpp  core_pch.hpp  diagnostics.cpp  diagnostics.hpp  types.hpp  util.hpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/rhi/: CMakeLists.txt  rhi.cpp  rhi.hpp  rhi_interface.hpp  rhi_interface_funcdefs.inl.hpp  rhi_render_command_funcdefs.inl.hpp  rhi_render_commands.cpp  rhi_render_commands.hpp  rhi_render_surface.cpp  rhi_render_surface.hpp  rhi_shader_compiler.cpp  rhi_shader_compiler.hpp  rhi_surface_info.hpp  rhi_swapchain.cpp  rhi_swapchain.hpp  rhi_types.cpp  rhi_types.hpp
src/utils/: CMakeLists.txt
src/utils/glfw_helpers/: CMakeLists.txt  glfw_helpers.cpp  glfw_helpers.hpp
